# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmbyext"
version = "1.0.0"
description = "recursively removes all files of given extension(s)"
readme = "README.md"
authors = [{ name = "Farhan Hasin Chowdhury", email = "shovik.is.here@gmail.com" }]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pip-tools"]

[project.urls]
Homepage = "https://github.com/fhsinchy/rmbyext"

[project.scripts]

rmbyext = "rmbyext:main"


